style layout of form

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                 and requirements.</p>
 
             <!-- projects cards -->
-            <div class="case_carousel">
+            <div class="case_carousel flex row">
                 <div class="case_card">
-                    <img class="card_image" src="/assets/images/video_edit.jpg" alt="close up image of blue rj45 network cables connected into a network switch">
+                    <img class="card_image" src="/assets/images/video_edit.jpg" alt="image of video editing software program on an ultra wide screen">
 
                     <section class="card_article">
                         <h3 class="card_title">Inked Productions</h3>
@@ -156,14 +156,14 @@
                     </section>
                 </div>
                 <div class="case_card">
-                    <img class="card_image" src="./assets/images/server.jpg" alt="cases card image">
+                    <img class="card_image" src="./assets/images/server.jpg" alt="image of a server room. img ix is printed on the wall of the server">
                     <section class="card_article">
                         <h3 class="card_title">Ant Media</h3>
                         <span class="card_text">Ant Media is a bustling animation studio that creates visually stunning animations for a wide range of audiences. With their imaginative and creative team, they strive to bring new and innovative ideas to life. However, as the studio grew, they faced a common challenge in the industry- managing their expanding network infrastructure. Ant Media needed a reliable and efficient solution to keep up with their growing demands and ensure their workflow remains smooth and seamless. With this in mind, they approached ByteSized Solutions for help.</span>
                     </section>
                 </div>
                 <div class="case_card">
-                    <img class="card_image" src="./assets/images/website.jpg" alt="cases card image">
+                    <img class="card_image" src="./assets/images/website.jpg" alt="image of a laptop showing a website on the screen. In the background is an imac showing the same website">
                     <section class="card_article">
                         <h3 class="card_title">SoundBeetle Music</h3>
                         <span class="card_text">SoundBeetle is a cutting-edge music licensing company that is changing
@@ -185,25 +185,25 @@
             <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
                 more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
                 you find the perfect IT solution for your needs.</p>
-            <div class="form">
+            <div class="form grid">
                 <form action="#" method="post">
-                    <div class="form-field">
+                    <div class="form_field">
                         <label for="fname">Last Name</label>
                         <input type="text" name="name" id="fname">
                     </div>
-                    <div class="form-field">
+                    <div class="form_field">
                         <label for="lname">First Name</label>
                         <input type="text" name="name" id="lname">
                     </div>
-                    <div class="form-field">
+                    <div class="form_field">
                         <label for="email">Email</label>
                         <input type="email" name="email" id="email">
                     </div>
-                    <div class="form-field">
+                    <div class="form_field">
                         <label for="company">Company</label>
                         <input type="text" name="company" id="company">
                     </div>
-                    <div class="form-field">
+                    <div class="form_field">
                         <label for="message">How can we help you?</label>
                         <input type="text" name="message" id="message">
                     </div>
