style form input field

--- a/index.html
+++ b/index.html
@@ -185,27 +185,29 @@
             <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
                 more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
                 you find the perfect IT solution for your needs.</p>
+
+                <!-- form  -->
             <div class="form grid">
-                <form action="#" method="post">
+                <form action="#" method="get">
                     <div class="form_field">
-                        <label for="fname">Last Name</label>
-                        <input type="text" name="name" id="fname">
+                        <label for="fname">First Name</label>
+                        <input type="text" name="name" id="fname" required>
                     </div>
                     <div class="form_field">
-                        <label for="lname">First Name</label>
-                        <input type="text" name="name" id="lname">
+                        <label for="lname">Last Name</label>
+                        <input type="text" name="name" id="lname" required>
                     </div>
                     <div class="form_field">
                         <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" required>
                     </div>
                     <div class="form_field">
                         <label for="company">Company</label>
-                        <input type="text" name="company" id="company">
+                        <input type="text" name="company" id="company" required>
                     </div>
                     <div class="form_field">
                         <label for="message">How can we help you?</label>
-                        <input type="text" name="message" id="message">
+                        <input type="text" name="message" id="message" required>
                     </div>
                     <button class="btn btn-pry">Send Message</button>
                 </form>
