--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a class="active nav-item" href="">Home</a></li>
                     <li><a class="nav_item" href="">About</a></li>
                     <li><a class="nav_item" href="">Services</a></li>
-                    <li><a class="nav_item" href="">Get In Touch</a></li>
+                    <li><a class="nav_item btn btn_pry" href="">Get In Touch</a></li>
                 </ul>
             </nav>
         </div>
@@ -33,7 +33,7 @@
         <section id="hero" class="hero flex row">
             <h1 class="main_title">We are ByteSized Solutions</h1>
             <p class="main_subtitle">Your Trusted IT Consultants</p>
-            <a href="" class="btn btn-pry cta">Get In Touch</a>
+            <a href="" class="btn btn_pry cta">Get In Touch</a>
         </section>
 
         <!-- who we are section -->
