change color of form to light background

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <label for="message">How can we help you?</label>
                         <input type="text" name="message" id="message" required>
                     </div>
-                    <button class="btn btn-pry">Send Message</button>
+                    <button class="btn btn_pry">Send Message</button>
                 </form>
                 <div class="side_form"> <!-- description of what happens after client fills and submits form-->
                     <h4 class="card_title">What Comes Next</h4>
