add icons to what we offer[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D svg icokkkk[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[C[C[C[C[C[C[C[C[C[[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~[3~ns to services

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteSized Consultancy</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"> <!--font awesome-->
 </head>
 
 <body>
@@ -52,37 +53,37 @@
             <!-- services cards -->
             <div class="grid services_cards ">
                 <div class="service_card card">
-                    <img src="" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/cloud-computing-4276.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
                 </div>
                 <div class=" card">
-                    <img src="" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/database-security-2358.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
                 </div>
                 <div class=" card">
-                    <img src="" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/network.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
                 </div>
                 <div class=" card">
-                    <img src="" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/laptop-cloud-storage-12595.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
                 </div>
                 <div class=" card">
-                    <img src="" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
                 </div>
                 <div class=" card">
-                    <img src="" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/checklist-13201.svg" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
