add get in touch banner

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
+
         </section>
 
         <!-- services section  -->
@@ -88,6 +89,7 @@
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
                 </div>
+
             </div>
         </section>
 
@@ -132,6 +134,15 @@
 
                 </div>
             </div>
+        </section>
+
+        <!-- get in touch banner -->
+        <section class="cta_banner">
+            <h3 class="section_title">Get In Touch</h3>
+            <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
+                more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
+                you find the perfect IT solution for your needs.</p>
+            <a href="#contact" class="btn btn_pry cta">Get In Touch</a>
         </section>
 
         <!--projects ||  success stories || case studies -->
