style about section. center aligned text

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
         </section>
 
         <!-- who we are section -->
-        <section class="about container">
+        <section class="about container flex">
             <h2 class="section_title">Who We Are</h2>
             <p class="section_text">At Exorcist Systems, we are a team of IT experts dedicated to helping businesses
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
+                <a href="about.html" class="btn btn_sec cta">Read about us <i class="fa fa-arrow-right"></i></a>
+
 
         </section>
 
