--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- navigation links -->
             <nav>
                 <ul class=" nav_items flex">
-                    <li><a class="active nav-item" href="">Home</a></li>
+                    <li><a class="active nav_item" href="">Home</a></li>
                     <li><a class="nav_item" href="">About</a></li>
                     <li><a class="nav_item" href="">Services</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
