add location to footer

--- a/about.html
+++ b/about.html
@@ -154,6 +154,14 @@
         </section>
 
         <footer>
+            <h2>Location</h2>
+    <p>ByteSized Solutions<br />
+    123 Main Street<br />
+    City, State ZIP Code<br />
+    Phone: (123) 456-7890<br />
+    Email: info@bytesizedsolutions.com</p>
+    <br />
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1403.7426454514997!2d-73.9896298!3d40.758896!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xedc07f0e07c17b24!2sEmpire+State+Building!5e0!3m2!1sen!2sus!4v1414141414456" width="600" height="450" frameborder="0" style="border:0"></iframe>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
         </footer>
 
