--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul class=" nav_items flex">
                     <li><a class="active nav_item" href="index.html">Home</a></li>
-                    <li><a class="nav_item" href="#about">About</a></li>
+                    <li><a class="nav_item" href="about.html">About</a></li>
                     <li><a class="nav_item" href="projects.html">Case Studies</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
                 </ul>
