--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <!-- navigation links -->
             <nav>
                 <ul class=" nav_items flex">
-                    <li><a class="active nav_item" href="">Home</a></li>
+                    <li><a class="active nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="#about">About</a></li>
-                    <li><a class="nav_item" href="">Case Studies</a></li>
+                    <li><a class="nav_item" href="#projects">Projects</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
