--- a/projects.html
+++ b/projects.html
@@ -20,9 +20,9 @@
             <!-- navigation links -->
             <nav>
                 <ul class=" nav_items flex">
-                    <li><a class="active nav_item" href="index.html">Home</a></li>
+                    <li><a class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="#about">About</a></li>
-                    <li><a class="nav_item" href="projects.html">Case Studies</a></li>
+                    <li><a class="active nav_item" href="projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
