add image to home hero[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D bg image to home hero

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- who we are section -->
         <section class="about container flex" id="about">
             <h2 class="section_title">Who We Are</h2>
-            <p class="section_text">At Exorcist Systems, we are a team of IT experts dedicated to helping businesses
+            <p class="section_text">At ByteSized Solutions, we are a team of IT experts dedicated to helping businesses
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
