make service cards auto fill[D[D[D[D[D[D[D[D[D[D grid[Cauto fill/responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header flex container">
             <!-- main brand logo -->
-            <a href="index.html">ByteSized Consultants</a>
+            <a class="brand" href="index.html">ByteSized Solutions</a>
 
             <!-- navigation links -->
             <nav>
