switch flex direction for nav on mobile screens

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <!-- main brand logo -->
             <a class="brand" href="index.html">ByteSized Solutions</a>
 
+            <!--mobile nav toggle-->
+            <label class="hamburger_icon" for="menu"><i class="fa fa-bars"></i></label>
+            <input type="checkbox" name="" id="menu" hidden>
+
             <!-- navigation links -->
             <nav>
                 <ul class=" nav_items flex">
@@ -100,7 +104,7 @@
             <h2 class="section_title">Why Choose Us</h2>
 
             <!-- offers cards -->
-            <div class="services_cards">
+            <div class="services_cards flex">
                 <div class="card offer flex">
                     <img src="" alt="offers_card_image" class="offers_card_image">
                     <div class="card_article">
