make mobile menu toggle display none/flex

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a class="brand" href="index.html">ByteSized Solutions</a>
 
             <!--mobile nav toggle-->
-            <label class="hamburger_icon" for="menu"><i class="fa fa-bars"></i></label>
-            <input type="checkbox" name="" id="menu" hidden>
+            <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
+            <input type="checkbox" name="" id="toggle" hidden>
 
             <!-- navigation links -->
             <nav>
