move toggle icon into nav in html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteSized Consultancy</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"> <!--font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <!--font awesome-->
 </head>
 
 <body>
@@ -16,12 +17,13 @@
             <!-- main brand logo -->
             <a class="brand" href="index.html">ByteSized Solutions</a>
 
-            <!--mobile nav toggle-->
-            <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
-            <input type="checkbox" name="" id="toggle" hidden>
 
             <!-- navigation links -->
             <nav>
+                <!--mobile nav toggle-->
+                <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
+                <input type="checkbox" name="" id="toggle" hidden>
+
                 <ul class=" nav_items flex">
                     <li><a class="active nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="#about">About</a></li>
@@ -48,7 +50,7 @@
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
-                <a href="about.html#services" class="btn btn_sec cta">Read about us <i class="fa fa-arrow-right"></i></a>
+            <a href="about.html#services" class="btn btn_sec cta">Read about us <i class="fa fa-arrow-right"></i></a>
 
 
         </section>
@@ -60,13 +62,15 @@
             <!-- services cards -->
             <div class="grid services_cards ">
                 <div class="service_card card">
-                    <img src="./assets/images/cloud-computing-4276.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/cloud-computing-4276.svg" alt="service_card_image"
+                        class="service_card_image">
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/database-security-2358.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/database-security-2358.svg" alt="service_card_image"
+                        class="service_card_image">
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
@@ -78,13 +82,15 @@
                         implementation services.</span>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/laptop-cloud-storage-12595.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/laptop-cloud-storage-12595.svg" alt="service_card_image"
+                        class="service_card_image">
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
                 </div>
                 <div class=" card">
-                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="service_card_image"
+                        class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
@@ -161,7 +167,8 @@
             <!-- projects cards -->
             <div class="case_carousel flex row">
                 <div class="case_card">
-                    <img class="card_image" src="/assets/images/video_edit.jpg" alt="image of video editing software program on an ultra wide screen">
+                    <img class="card_image" src="/assets/images/video_edit.jpg"
+                        alt="image of video editing software program on an ultra wide screen">
 
                     <section class="card_article">
                         <h3 class="card_title">Inked Productions</h3>
@@ -174,14 +181,22 @@
                     </section>
                 </div>
                 <div class="case_card">
-                    <img class="card_image" src="./assets/images/server.jpg" alt="image of a server room. img ix is printed on the wall of the server">
+                    <img class="card_image" src="./assets/images/server.jpg"
+                        alt="image of a server room. img ix is printed on the wall of the server">
                     <section class="card_article">
                         <h3 class="card_title">Ant Media</h3>
-                        <span class="card_text">Ant Media is a bustling animation studio that creates visually stunning animations for a wide range of audiences. With their imaginative and creative team, they strive to bring new and innovative ideas to life. However, as the studio grew, they faced a common challenge in the industry- managing their expanding network infrastructure. Ant Media needed a reliable and efficient solution to keep up with their growing demands and ensure their workflow remains smooth and seamless. With this in mind, they approached ByteSized Solutions for help.</span>
+                        <span class="card_text">Ant Media is a bustling animation studio that creates visually stunning
+                            animations for a wide range of audiences. With their imaginative and creative team, they
+                            strive to bring new and innovative ideas to life. However, as the studio grew, they faced a
+                            common challenge in the industry- managing their expanding network infrastructure. Ant Media
+                            needed a reliable and efficient solution to keep up with their growing demands and ensure
+                            their workflow remains smooth and seamless. With this in mind, they approached ByteSized
+                            Solutions for help.</span>
                     </section>
                 </div>
                 <div class="case_card">
-                    <img class="card_image" src="./assets/images/website.jpg" alt="image of a laptop showing a website on the screen. In the background is an imac showing the same website">
+                    <img class="card_image" src="./assets/images/website.jpg"
+                        alt="image of a laptop showing a website on the screen. In the background is an imac showing the same website">
                     <section class="card_article">
                         <h3 class="card_title">SoundBeetle Music</h3>
                         <span class="card_text">SoundBeetle is a cutting-edge music licensing company that is changing
@@ -204,7 +219,7 @@
                 more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
                 you find the perfect IT solution for your needs.</p>
 
-                <!-- form  -->
+            <!-- form  -->
             <div class="form grid">
                 <form action="#" method="get">
                     <div class="form_field">
