set bg overlay of main to gradient

--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
     <main>
         <!-- hero section -->
         <section id="hero" class="hero flex row">
-            <h1 class="main_title">We are ByteSized Solutions</h1>
-            <p class="main_subtitle">Your Trusted IT Consultants</p>
+            <div class="bg_overlay"></div>
+            <div class="main_text flex row">
+                <h1 class="main_title">We are ByteSized Solutions</h1>
+                <p class="main_subtitle">Your Trusted IT Consultants</p>
             <a href="#contact" class="btn btn_pry cta">Get In Touch</a>
+            </div>
+
         </section>
 
         <!-- who we are section -->
