add brand icon in header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ByteSized Consultancy</title>
+    <title>ByteSized Solutions</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!--font awesome-->
@@ -15,7 +15,10 @@
     <header>
         <div class="header flex container">
             <!-- main brand logo -->
-            <a class="brand" href="index.html">ByteSized Solutions</a>
+            <div class="brand">
+                <img src="/assets/images/logo.svg" alt="" class="brand_icon">
+                <a class="brand" href="index.html">ByteSized Solutions</a>
+            </div>
 
 
             <!-- navigation links -->
