style brand logo and text

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
         <div class="header flex container">
             <!-- main brand logo -->
-            <div class="brand">
+            <div class="brand flex">
                 <img src="/assets/images/logo.svg" alt="" class="brand_icon">
-                <a class="brand" href="index.html">ByteSized Solutions</a>
+                <a class="brand" href="index.html"><span>ByteSized</span> <br> Solutions</a>
             </div>
 
 
