add nav to footer

--- a/index.html
+++ b/index.html
@@ -268,6 +268,15 @@
             </div>
         </section>
         <footer>
+            <!-- footer nav  -->
+            <nav>
+                <ul class=" nav_items flex">
+                    <li><a class="nav_item" href="index.html">Home</a></li>
+                    <li><a class="nav_item" href="#about">About</a></li>
+                    <li><a class="nav_item" href="#projects">Projects</a></li>
+                    <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                </ul>
+            </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
         </footer>
 
