--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input type="checkbox" name="" id="toggle" hidden>
 
                 <ul class=" nav_items flex">
-                    <li><a class="active nav_item" href="index.html">Home</a></li>
+                    <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="#about">About</a></li>
                     <li><a class="nav_item" href="#projects">Projects</a></li>
                     <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
